--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Helloe world! This is HTML5 Boilerplate.</p>
+        <p>Hello Professor Williams</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
@@ -35,5 +35,3 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
-    </body>
-</html>
